--- a/demo/index.html
+++ b/demo/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <!-- Load file util scripts -->
-    <script data-main="main" src="js/components/requirejs/require.js"></script>
+    <script data-main="main" src="../../requirejs/require.js"></script>
 
   </body>
 </html>
